@@ -78,11 +78,10 @@ public class SeqGeneticAlgorithm {
             List<Integer> sortedMatches = new ArrayList<>(itemMatches);
             sortedMatches.add(i + nRes);
             if (sortedMatches.size() == 1) {
-                iPeak = sortedMatches.get(0);
+                iPeak = sortedMatches.getFirst();
             } else {
                 Collections.shuffle(sortedMatches);
-                for (int k = 0; k < sortedMatches.size(); k++) {
-                    int testPeak = sortedMatches.get(k);
+                for (int testPeak : sortedMatches) {
                     if (!used[testPeak]) {
                         iPeak = testPeak;
                         break;
@@ -111,7 +110,6 @@ public class SeqGeneticAlgorithm {
         if ((generation % 10) == 0) {
             DescriptiveStatistics dStat = new DescriptiveStatistics();
             result.population().stream().forEach(pheno -> dStat.addValue(pheno.fitness()));
-            System.out.printf("%5d %10.3f %10.3f %10.4f\n", result.generation(), dStat.getMin(), dStat.getMean(), dStat.getMax());
             if (progressConsumer != null) {
                 Progress progress = new Progress(result.generation(), dStat.getMin());
                 progressConsumer.accept(progress);
@@ -121,9 +119,7 @@ public class SeqGeneticAlgorithm {
 
     private List<Genotype<EnumGene<Integer>>> initGenotypes(List<ResSeqMatcher.Matching> initMatches, int stops) {
         initMatches.sort(Comparator.comparing(ResSeqMatcher.Matching::score));
-        //int nMulti = Math.min(seqGenParameters.multiMaxLimit(), initMatches.size());
         int nMulti = Math.min(initMatches.size(), seqGenParameters.populationSize());
-        // System.out.println(" nMultiMatches " + initMatches.size() + " multiLimit " + multiMaxLimit + " nMulti " + nMulti);
         List<Integer> alleleList = new ArrayList<>();
         for (int i = 0; i < stops; i++) {
             alleleList.add(i);
@@ -132,21 +128,18 @@ public class SeqGeneticAlgorithm {
         List<Genotype<EnumGene<Integer>>> genotypes = new ArrayList<>();
 
         for (ResSeqMatcher.Matching matching : initMatches.subList(0, nMulti)) {
-            //  System.out.println("multi value " + matching.score());
             ArrayList<Integer> matchArray = new ArrayList<>();
             boolean[] used = new boolean[stops];
             for (int i : matching.matches()) {
                 used[i] = true;
                 matchArray.add(i);
             }
-            int j = seqResMatches.size();
             for (int i = 0; i < used.length; i++) {
                 if (!used[i]) {
                     matchArray.add(i);
                 }
             }
             final ISeq<Integer> alleles = ISeq.of(matchArray);
-            // System.out.println(alleles);
             AssignmentChromosome<EnumGene<Integer>> permCh = new AssignmentChromosome(matchArray.stream().map(i -> EnumGene.of(i, alleleSeq)).collect(ISeq.toISeq()));
 
             Genotype gtype = Genotype.of(permCh);
@@ -198,11 +191,7 @@ public class SeqGeneticAlgorithm {
 
         int[] finalMatching = Codecs.ofPermutation(stops).decoder().apply(best.genotype());
         double fitness = best.fitness();
-        ResSeqMatcher.Matching matching = new ResSeqMatcher.Matching(fitness, finalMatching);
-//        for (int i=0;i<finalMatching.length;i++) {
-//            System.out.println(i + " " + finalMatching[i]);
-//        }
-        return matching;
+        return new ResSeqMatcher.Matching(fitness, finalMatching);
     }
 
     public int getNGenerations() {
